version 0.7.1 - ??-Mar-2009
 . Actions: added tags to actions (issue #222)
 . Actions: Spawns can be Speeded (issue #257)
 . Actions: Speed can be altered in runtime (part of issue #236)
 . AtlasSprite: new feature (issue #238)
 . CocosNode: Camera is lazy alloced (issue #94)
 . CocosNode: addChild, removeChild:cleanup, getChildByTag family functions (issue #253)
 . CocosNode: added better comments, cleanup code (issue #219)
 . CocosNode: added RGB protocol: Atlas,Texture & ColorLayer conforms it (issue #234)
 . CocosNode: fixed memory leak when removeAndStop a node with children with actions (issue #254)
 . CocosLive: filter by device id (issue #223)
 . CocosLive: category is UTF8'ized (issue #227)
 . CocosLive: using cc_playername instead of usr_playername (issue #242)
 . CocosLive: supports "update score" (issue #250)
 . Demos: added performance test (issue #243)
 . Director: FastDirector doesn't leak autoreleased objects (issue #221)
 . Director: prevents calling startAnimation twice in a row (issue #215)
 . Menu: can be aligned in columns / rows. Updated menu example (issue #206)
 . Menu: MenuItem supports LabelAtlas (issue #235)
 . Menu: MenuItemFont fixed memory leak (issue #232)
 . Scheduler: if signature is not correct Assert (issue #218)
 . Sprite: correct transform anchor point (issue #216)
 . TextureAtlas: support for texture2D (issue #161)

version 0.7.0 - 19-Feb-2009
 . Action: elapsed is a property (issue #203)
 . Actions: EaseIn/Out added. Cubic/Quad removed (issue #195)
 . Atlas: Fixed black line (issue #135 and issue #47)
 . Atlas: Works when GL_CULL_FACE is enabled (issue #179)
 . Atlas: updateAltasValues renamed to updateAtlasValues (issue #198)
 . CocosLive: added client and example that uses the CocosLive service (issue #175)
 . CocosNode: children is a property (issue #185)
 . CocosNode: rotate before scale (issue #217)
 . Demos: Creating Window and attaching cocos2d to it (issue #180)